# jwp-pms-v1

./: README.md  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  auth.py  calendar.py  dashboard.py  health.py  projects.py  system.py  tasks.py  uploads.py  user.py
backend/src/core/: __init__.py  config.py  constants.py  database.py  db_utils.py  dependencies.py  security.py
backend/src/models/: __init__.py  calendar.py  project.py  task.py  user.py
backend/src/schemas/: __init__.py  auth.py  calendar.py  common.py  project.py  task.py  user.py
backend/src/services/: __init__.py  calendar.py  dashboard.py  file.py  project.py  task.py  user.py
backend/src/utils/: __init__.py  auth.py  exceptions.py  field_updater.py  helper.py  logger.py
backend/tests/: conftest.py
frontend/: package-lock.json
